# cheryl-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cheryl-engine.sln  eng.vcxitems  engine.vcxproj  engine.vcxproj.filters
engine/private/asset-types/: 2dtools.h  scene-nodes.cpp  tile-set.cpp
engine/public/: stdafx.h
engine/public/asset-types/: sprite.h
engine/public/interfaces/: loader.h  pool.h
engine/public/resource-management/: resources.h
include/: cheryl-engine.h  internals.h  stdafx.h
include/abstracts/: asset.h  factory.h  pool.h  singleton.h
include/asset-types/: basic-types.h  font.h  graphic.h  scene-nodes.h  tile-set.h
include/core/: engine.h  filemgr.h  game.h  resources.h
include/core/modules/input-controls/: control-module.h
include/core/modules/input-controls-2/: InputState_KeyboardMouse.h  InputState_SteamController.h  input-binding.h  input-context.h  input-mapper.h  input-state.h  input-system.h
include/interfaces/: actor.h  allocator.h  asset.h  factory.h  game-module.h  loadable.h  pool.h
include/internals/: aliases.h  exceptions.h  macros.h  math.h  posh.h  singleton.h  stacktrace.h
include/logging/: stacktrace.h
include/object-management/: asset-mgr.h  factories.h  factory.h  inter-access.h
include/resource-management/: disk.h  factories.h  factory.h  memory.h  pool.h  resources.h
include/resource-management/factories/: asset-factory.h  generic-factory.h  type-counter.h
include/resource-management/pools/: asset-pool.h  generic-pool.h  object-pool.h
include/types/: basic-types.h  font.h  mesh.h  tile-set.h
src/abstracts/: pool-protected.cpp  pool-public.cpp  pool.cpp
src/asset-types/: 2dtools.cpp  basic-types.cpp  font.cpp  graphic.cpp  mesh.cpp  sprite.cpp
src/core/: engine.cpp  filemgr.cpp  game.cpp  resources.cpp
src/core/modules/input-controls/: control-module.cpp
src/core/modules/input-controls-2/: InputState_KeyboardMouse.cpp  InputState_SteamController.cpp  input-binding.cpp  input-context.cpp  input-mapper.cpp  input-system.cpp
src/internals/: singleton.cpp
src/resource-management/: disk.cpp  memory.cpp  resources.cpp
tests/singleton/: main.cpp
