cmake_minimum_required(VERSION 3.10)
project(cheryl_engine)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)
include_directories(include/asset-types)
include_directories(include/core)
include_directories(include/core/modules)
include_directories(include/core/modules/input-controls)
include_directories(include/core/modules/input-controls-2)
include_directories(include/interfaces)
include_directories(include/internals)
include_directories(include/object-management)
include_directories(include/resource-management)
include_directories(src/asset-types)

add_executable(cheryl_engine
        include/asset-types/basic-types.h
        include/asset-types/font.h
        include/asset-types/graphic.h
        include/asset-types/mesh.h
        include/asset-types/scene-nodes.h
        include/asset-types/sprite.h
        include/asset-types/tile-set.h
        include/core/modules/input-controls/control-module.h
        include/core/modules/input-controls-2/input-binding.h
        include/core/modules/input-controls-2/input-context.h
        include/core/modules/input-controls-2/input-mapper.h
        include/core/modules/input-controls-2/input-state.h
        include/core/modules/input-controls-2/input-system.h
        include/core/modules/input-controls-2/InputState_KeyboardMouse.h
        include/core/modules/input-controls-2/InputState_SteamController.h
        include/core/engine.h
        include/core/game.h
        include/interfaces/actor.h
        include/interfaces/allocator.h
        include/interfaces/asset.h
        include/interfaces/factory.h
        include/interfaces/game-module.h
        include/interfaces/pool.h
        include/internals/exceptions.h
        include/internals/macros.h
        include/internals/math.h
        include/internals/posh.h
        include/internals/singleton.h
        include/internals/stacktrace.h
        include/object-management/asset-mgr.h
        include/object-management/inter-access.h
        include/resource-management/factories.h
        include/resource-management/files.h
        include/resource-management/memory.h
        include/resource-management/pool.h
        include/cheryl-engine.h
        include/internals.h
        include/stdafx.h
        src/asset-types/2dtools.cpp
        src/asset-types/2dtools.h
        src/asset-types/basic-types.cpp
        src/asset-types/font.cpp
        src/asset-types/graphic.cpp
        src/asset-types/mesh.cpp
        src/asset-types/scene-nodes.cpp
        src/asset-types/sprite.cpp
        src/asset-types/tile-set.cpp
        src/core/modules/input-controls/control-module.cpp
        src/core/modules/input-controls-2/input-binding.cpp
        src/core/modules/input-controls-2/input-context.cpp
        src/core/modules/input-controls-2/input-mapper.cpp
        src/core/modules/input-controls-2/input-system.cpp
        src/core/modules/input-controls-2/InputState_KeyboardMouse.cpp
        src/core/modules/input-controls-2/InputState_SteamController.cpp
        src/core/engine.cpp
        src/core/game.cpp
        src/resource-management/memory.cpp
        src/resource-management/pool.cpp)
